# VLCB-Arduino

./: .gitignore  Arduino CBUS Library Instructions 1.0.docx  Arduino CBUS Library Instructions 1.1.docx  CMakeLists.txt  Doxygen.Library.conf  Doxygen.Sketch.conf  Doxygen.conf  EEPROM_Types_Notes.txt  LICENSE.md  README.md  ReleaseNotes.md  TODO.md  _config.yml  build-all.sh  build-test-asan.sh  library.properties
Arduino/: ACAN2515.h  Arduino.h  CMakeLists.txt  EEPROM.h  SPI.h  Stream.h  Streaming.h  Wire.h
cmake/: arduino_ACAN2515.cmake  arduino_Bounce2.cmake  arduino_Streaming.cmake  arduino_core.cmake  arduino_flags.cmake  arduino_hex.cmake  arduino_libs.cmake  arduino_sdk.cmake  arduino_upload.cmake
docs/: API.md  CanTransport.md  Design.md  Doxygen.md  Examples.md  GitHubWorkflowsTutorial.md  MinimumNode.md  MinimumNodeService.md  PersistentStorage.md  SerialUserInterface.md  Service.md  SketchDevelopment.md  Transport.md  VLCB4in4out_README.md  VLCBArduino.drawio
examples/: CBUS_empty.ino
html.developer/: _abstract_event_teaching_service_8cpp.html  _abstract_event_teaching_service_8h_source.html  _array_holder_8h_source.html  _c_a_n2515_8h_source.html  _can_service_8cpp.html  _can_service_8cpp.js  _can_service_8h.js  _can_service_8h_source.html  _can_service_with_diagnostics_8h.html  _can_transport_8h.js  _can_transport_8h_source.html  _circular_buffer_8h.html  _circular_buffer_8h.js  _configuration_8cpp.html  _configuration_8cpp.js  _consume_own_events_service_8h.html  _consume_own_events_service_8h.js  _controller_8cpp.html  _controller_8cpp.js  _controller_8h_source.html  _due_eeprom_emulation_storage_8cpp.html  _due_eeprom_emulation_storage_8h.html  _eeprom_external_storage_8h_source.html  _eeprom_internal_storage_8cpp.html  _eeprom_internal_storage_8h.html  _event_consumer_service_8h.js  _event_consumer_service_8h_source.html  _event_consumer_service_with_diagnostics_8h.js  _event_consumer_service_with_diagnostics_8h_source.html  _event_producer_service_8h.html  _event_producer_service_8h_source.html  _event_producer_service_with_diagnostics_8h.html  _event_producer_service_with_diagnostics_8h.js  _event_slot_teaching_service_8h.html  _event_slot_teaching_service_8h.js  _event_teaching_service_8h.html  _event_teaching_service_with_diagnostics_8cpp.html  _event_teaching_service_with_diagnostics_8h.js  _flash_storage_8cpp.html  _flash_storage_8h.html  (+129 more)
html.library/: _abstract_event_teaching_service_8cpp.html  _abstract_event_teaching_service_8cpp.js  _abstract_event_teaching_service_8h.js  _abstract_event_teaching_service_8h_source.html  _array_holder_8h.html  _array_holder_8h.js  _c_a_n2515_8cpp.html  _c_a_n2515_8h.html  _c_a_n2515_8h_source.html  _can_service_8cpp.html  _can_service_8cpp.js  _can_service_8h.html  _can_service_8h_source.html  _can_service_with_diagnostics_8cpp.html  _can_service_with_diagnostics_8h.js  _can_service_with_diagnostics_8h_source.html  _can_transport_8h.html  _can_transport_8h_source.html  _circular_buffer_8h.html  _circular_buffer_8h.js  _circular_buffer_8h_source.html  _configuration_8cpp.html  _configuration_8cpp.js  _configuration_8h.html  _configuration_8h.js  _configuration_8h_source.html  _consume_own_events_service_8cpp.html  _consume_own_events_service_8h.html  _consume_own_events_service_8h_source.html  _controller_8cpp.html  _controller_8h.html  _controller_8h.js  _controller_8h_source.html  _create_default_storage_for_platform_8cpp.html  _create_default_storage_for_platform_8cpp.js  _due_eeprom_emulation_storage_8h.js  _due_eeprom_emulation_storage_8h_source.html  _eeprom_external_storage_8cpp.html  _eeprom_external_storage_8h.html  _eeprom_external_storage_8h.js  (+311 more)
html.sketch/: _abstract_event_teaching_service_8h_source.html  _c_a_n2515_8h.html  _c_a_n2515_8h.js  _c_a_n2515_8h_source.html  _can_service_8h.html  _can_service_8h_source.html  _can_transport_8h.html  _can_transport_8h.js  _can_transport_8h_source.html  _consume_own_events_service_8h.html  _consume_own_events_service_8h.js  _consume_own_events_service_8h_source.html  _event_consumer_service_8h.html  _event_consumer_service_8h_source.html  _event_producer_service_8h.html  _event_producer_service_8h_source.html  _event_slot_teaching_service_8h.html  _event_slot_teaching_service_8h.js  _event_slot_teaching_service_8h_source.html  _event_teaching_service_8h.html  _event_teaching_service_8h_source.html  _internal_diagnostics_service_8h.html  _internal_diagnostics_service_8h_source.html  _l_e_d_user_interface_8h.html  (+100 more)
src/: AbstractEventTeachingService.cpp  AbstractEventTeachingService.h  ArrayHolder.h  CAN2515.cpp  CAN2515.h  CAN2515Diagnostics.h  CBUS.cpp  CBUS.cpp.bak  CBUS.h  CBUS2515.cpp  CBUS2515.h  CBUSLED.cpp  CBUSLED.h  CBUSLongMessage.cpp  CBUSParams.cpp  CBUSParams.h  CBUSTransport.h  CBUSconfig.cpp  CBUSconfig.h  CBUSswitch.cpp  CBUSswitch.h  CMakeLists.txt  CanService.cpp  CanService.h  CanServiceWithDiagnostics.cpp  CanServiceWithDiagnostics.h  CanTransport.cpp  CanTransport.h  CbusService.cpp  CbusService.h  CircularBuffer.h  CombinedUserInterface.cpp  CombinedUserInterface.h  Configuration.cpp  Configuration.h  ConsumeOwnEventsService.cpp  ConsumeOwnEventsService.h  Controller.cpp  Controller.h  CreateDefaultStorageForPlatform.cpp  (+71 more)
test/: Arduino.hpp  ArduinoMock.cpp  CMakeLists.txt  MockCanTransport.cpp  MockCanTransport.h  MockStorage.cpp  MockStorage.h  MockTransport.cpp  MockTransport.h  MockTransportService.cpp  MockTransportService.h  MockUserInterface.cpp  MockUserInterface.h  README.md  TestTools.cpp  TestTools.hpp  VlcbCommon.cpp  VlcbCommon.h  testAll.cpp  testArduino.cpp  testCanService.cpp  testCanService.h  testCircularBuffer.cpp  testConfiguration.cpp  testConsumeOwnEventsService.cpp  testEventConsumerService.cpp  testEventProducerService.cpp  testEventTeachingService.cpp  testGridConnect.cpp  testLED.cpp  testLongMessageService.cpp  testMinimumNodeService.cpp  testMinimumNodeService.h  testNodeVariableService.cpp  testNodeVariableService.h  testNodeVariablesService.cpp  testNodeVariablesService.h  testSwitch.cpp  testTimedResponse.cpp
(+343 files in other folders)
